Modificação do Header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>LingoLeans</title>
+        <title>Front-End</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -39,8 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Revolucionando a comunicação !</div>
-                <div class="masthead-heading text-uppercase">Conheça o futuro da tradução de Libras</div>
+                <div class="masthead-subheading">Revolucionando a experiência digital!</div>
+                <div class="masthead-heading text-uppercase">Conheça o Front-End</div>
+                <div class="masthead-subheading">Interfaces inteligentes, design moderno e interação real.</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Saiba mais</a>
             </div>
         </header>
@@ -48,8 +49,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Por que isso é revolucionário?</h2>
-                    <h3 class="section-subheading text-muted">Apresentamos a LingoLeans, uma solução inovadora que utiliza tecnologia de ponta para traduzir Libras (Língua Brasileira de Sinais) em tempo real. Nosso projeto captura os movimentos das mãos, expressões faciais e gestos, transformando-os instantaneamente em texto.</h3>
+                    <h2 class="section-heading text-uppercase">Por que o Front-End é revolucionário?</h2>
+                    <h3 class="section-subheading text-muted">Apresentamos o Front-End, a área que dá vida à web. Por meio de código, design e criatividade, os desenvolvedores criam interfaces interativas e acessíveis, conectando pessoas ao mundo digital de forma intuitiva e envolvente.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -58,8 +59,8 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                             
                         </span>
-                        <h4 class="my-3">Exclusividade</h4>
-                        <p class="text-muted">Poucos projetos no mundo exploram essa tecnologia com a precisão e acessibilidade que oferecemos.</p>
+                        <h4 class="my-3">Experiência do Usuário</h4>
+                        <p class="text-muted">Criamos interfaces que encantam, tornando a navegação intuitiva, agradável e acessível a todos os públicos.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -67,16 +68,16 @@
                             
                             <i class="fas fa-user fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Inclusão</h4>
-                        <p class="text-muted">Facilitamos a comunicação entre surdos e ouvintes, promovendo um diálogo mais natural e eficiente.</p>
+                        <h4 class="my-3">Tecnologia de Ponta</h4>
+                        <p class="text-muted">Utilizamos linguagens modernas como HTML, CSS e JavaScript, além de frameworks como React e Vue, para desenvolver aplicações rápidas e responsivas.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Tecnologia avançada</h4>
-                        <p class="text-muted">Utilizamos algoritmos de inteligência artificial e sensores de movimento para garantir traduções precisas e confiáveis.
+                        <h4 class="my-3">Inovação e Impacto</h4>
+                        <p class="text-muted">O Front-End é o elo entre o ser humano e a tecnologia — é onde ideias ganham forma, cor e movimento. Cada linha de código transforma experiências.
 
 </p>
                     </div>
