adição das imagens e vídeo na seção de tecnologias

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="stats">
-      <div><h3>500K+</h3><p>Vagas Anuais no Brasil</p></div>
-      <div><h3>R$ 8.5K</h3><p>Salário Médio Nacional</p></div>
-      <div><h3>95%</h3><p>Taxa de Empregabilidade</p></div>
+      <div><h3>4K+</h3><p>Vagas abertas no Linkedin <strong>HOJE</strong></p></div>
+      <div><h3>R$ 5.8K</h3><p>Salário Médio Nacional (CAGED)</p></div>
+      <div><h3>ALTA</h3><p>Taxa de Empregabilidade</p></div>
     </div>
   </section>
 
@@ -211,7 +211,6 @@
       </div>
     </div>
   </div>
-
   <script src="js/scripts.js"></script>
 </body>
 </html>
